// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventDetails Component should render with all props 1`] = `
<Panel
  title="Event Details"
>
  <Panel.Section>
    <LabelledValue
      key="key1"
      label={
        <Tooltip
          bottom={true}
          content="description for key1"
          dark={true}
          forcePosition={false}
          horizontalOffset="0px"
          preferredDirection={
            Object {
              "bottom": true,
              "left": false,
              "right": true,
              "top": false,
            }
          }
          right={true}
        >
          key1
        </Tooltip>
      }
      value="val1"
    />
    <LabelledValue
      key="key2"
      label="key2"
    >
      <CopyField
        hideCopy={true}
        value="[\\"an\\",\\"arrray\\"]"
      />
    </LabelledValue>
    <LabelledValue
      key="type"
      label="type"
      value="bounce"
    />
  </Panel.Section>
  <Panel.Section>
    <LabelledValue
      label="Raw Json"
    >
      <CopyField
        hideCopy={false}
        value="{\\"key1\\":\\"val1\\",\\"key2\\":[\\"an\\",\\"arrray\\"],\\"type\\":\\"bounce\\"}"
      />
      <Panel
        sectioned={true}
        title="Map"
      >
        <img
          src="https://maps.googleapis.com/maps/api/staticmap?&zoom=13&size=300x150&maptype=roadmap
&markers=color:blue%7Clabel:S%7C34.461,-84.4278
&key=AIzaSyCPEyzwYdKNq-lsqOn7fcYivTWpuZirWNI"
        />
      </Panel>
    </LabelledValue>
  </Panel.Section>
</Panel>
`;

exports[`EventDetails Component should render with no props 1`] = `
<Panel
  title="Event Details"
>
  <Panel.Section />
  <Panel.Section>
    <LabelledValue
      label="Raw Json"
    >
      <CopyField
        hideCopy={false}
        value="{}"
      />
      <Panel
        sectioned={true}
        title="Map"
      >
        <img
          src="https://maps.googleapis.com/maps/api/staticmap?&zoom=13&size=300x150&maptype=roadmap
&markers=color:blue%7Clabel:S%7C34.461,-84.4278
&key=AIzaSyCPEyzwYdKNq-lsqOn7fcYivTWpuZirWNI"
        />
      </Panel>
    </LabelledValue>
  </Panel.Section>
</Panel>
`;
